@@ -18,7 +18,7 @@ public class VanillaColorResolver implements AdventureTagResolver {
     @Override
     public @Nullable String resolve(@NotNull String tag, @NotNull AdventureArgumentQueue argumentQueue) {
         return AdventureUtils.getByName(tag)
-                .map(chatColor -> "%c%c".formatted(ChatColor.COLOR_CHAR, chatColor.getChar()))
+                .map(chatColor -> String.format("%c%c", ChatColor.COLOR_CHAR, chatColor.getChar()))
                 .orElse(null);
     }
 }
